@@ -100,6 +100,10 @@ UCM
 ---------------------
 * Logging contributor activities in UCM Modificationset throws a NullPointerException on Linux Platform (CC-815). Path by Patrick Jenner.
 
+reporting jsp app
+======================
+* Display file size and date on artifacts page (CC-731). Patch by Doug Berkland.
+
 Dashboard
 ======================
 * Fix bug where tests that took > 1000 seconds would cause an exception that prevented the build detail page from displaying (CC-828).
